--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     "prettier": "^3.0.3",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
-    "vue-tsc": "^1.8.27"
+    "vite-plugin-vuetify": "^2.0.1",
+    "vue-tsc": "^1.8.27",
+    "vuetify": "^3.5.6"
+  },
+  "volta": {
+    "node": "20.11.1"
   }
 }
